[gd_scene load_steps=8 format=2]

[ext_resource path="res://Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]
[ext_resource path="res://NotAnAd.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="StartUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StartUI/CenterContainer"]
margin_left = 154.0
margin_top = 339.0
margin_right = 445.0
margin_bottom = 460.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="StartUI/CenterContainer/VBoxContainer"]
margin_right = 291.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Press to start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="StartUI/CenterContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 291.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameUI" type="Control" parent="."]
margin_left = 14.0
margin_top = 10.0
margin_right = 189.0
margin_bottom = 79.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GameUI"]
margin_right = 175.0
margin_bottom = 69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GameUI/MarginContainer"]
margin_top = 18.0
margin_right = 175.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PauseUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseUI/CenterContainer"]
margin_left = 229.0
margin_top = 339.0
margin_right = 370.0
margin_bottom = 460.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseUI/CenterContainer/VBoxContainer"]
margin_right = 141.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PauseUI/CenterContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 141.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameoverUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameoverUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GameoverUI/VBoxContainer"]
margin_right = 600.0
margin_bottom = 716.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameoverUI/VBoxContainer/CenterContainer"]
margin_left = 180.0
margin_top = 268.0
margin_right = 419.0
margin_bottom = 447.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="GameoverUI/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 239.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="GameoverUI/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 239.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 4 )
text = "Score: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="GameoverUI/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 239.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotAnAd" parent="GameoverUI/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 720.0
margin_right = 600.0
margin_bottom = 800.0
[connection signal="pressed" from="StartUI/CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="GameoverUI/VBoxContainer/CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
